Merge branch 'main' into weigl/key-javaparser3
and some bug fixes

# By Alexander Weigl (5) and Wolfram Pfeifer (2)
# Via GitHub (1) and Wolfram Pfeifer (1)
* main:
  increase spotless version (and thus also eclipse formatter) to fix missing space in instanceof formatting
  Spotless and fix rebase
  Some additional minor fixes and spotlessApply
  Update `collect(Collectors.toList())` to `toList()`
  Introduction of record classes where it seems useful.
  Refactor: Introduce a pattern variable were possible.
  Translate large string concatenations into raw string literal (text blocks)

# Conflicts:
#	key.core/src/main/java/de/uka/ilkd/key/java/JavaInfo.java
#	key.core/src/main/java/de/uka/ilkd/key/java/KeYProgModelInfo.java
#	key.core/src/main/java/de/uka/ilkd/key/java/PosConvertException.java
#	key.core/src/main/java/de/uka/ilkd/key/java/Recoder2KeY.java
#	key.core/src/main/java/de/uka/ilkd/key/java/Recoder2KeYTypeConverter.java
#	key.core/src/main/java/de/uka/ilkd/key/java/SchemaRecoder2KeYConverter.java
#	key.core/src/main/java/de/uka/ilkd/key/java/ast/declaration/MethodDeclaration.java
#	key.core/src/main/java/de/uka/ilkd/key/java/ast/declaration/TypeDeclaration.java
#	key.core/src/main/java/de/uka/ilkd/key/java/recoderext/ClassFileDeclarationBuilder.java
#	key.core/src/main/java/de/uka/ilkd/key/java/recoderext/ClassInitializeMethodBuilder.java
#	key.core/src/main/java/de/uka/ilkd/key/java/recoderext/ClassPreparationMethodBuilder.java
#	key.core/src/main/java/de/uka/ilkd/key/java/recoderext/ConstructorNormalformBuilder.java
#	key.core/src/main/java/de/uka/ilkd/key/java/recoderext/EnumClassBuilder.java
#	key.core/src/main/java/de/uka/ilkd/key/java/recoderext/JMLTransformer.java
#	key.core/src/main/java/de/uka/ilkd/key/java/recoderext/PrepareObjectBuilder.java
#	key.core/src/main/java/de/uka/ilkd/key/java/recoderext/ProofJavaProgramFactory.java
#	key.core/src/main/java/de/uka/ilkd/key/java/recoderext/RecoderModelTransformer.java
#	key.core/src/main/java/de/uka/ilkd